/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 */

package com.mycompany.tiendadeconv;

/**
 *
 * @author eliut
 */
public class Tiendadeconv {

    public static void main(String[] args) {
        System.out.println("Hello World!");
    }
}
